# cc-ui-kit-leptos-test

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy-config.json  index.html  input.css  tailwind.config.js
src/: main.rs
