[package]
name = "cc-ui-kit-leptos-test"
version = "0.1.1"
edition = "2024"

[dependencies]
cc-ui-kit = { git = "https://github.com/markcda/cc-ui-kit.git", tag = "0.1.0-alpha-10" }
icondata = "0.5"
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
lucide-leptos = "1.1"
palette = "0.7"
thaw = { version = "0.4.1", features = ["csr"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
